# Recurse into subdirectories.
if(ROBOTS_012)
#add_subdirectory (bclikeregions)
add_subdirectory (ball)
add_subdirectory (irp6_m)
add_subdirectory (irp6_tfg)
add_subdirectory (block_move)
#add_subdirectory (calibration)
#add_subdirectory (draughts)
#add_subdirectory (dung)
add_subdirectory (ecp_transparent)
add_subdirectory (edge_follow)
add_subdirectory (spring_contact)
add_subdirectory (generator_tester)
add_subdirectory (haptic)
add_subdirectory (haptic_stiffness)
add_subdirectory (mp_common)
add_subdirectory (neuron)
add_subdirectory (playerjoy)
add_subdirectory (pnml)
add_subdirectory (rcsc)
add_subdirectory (swarm_demo_irp6)
add_subdirectory (tcim_bug)
add_subdirectory (teach)
add_subdirectory (time)
add_subdirectory (visual_servoing)
add_subdirectory (visual_servoing_demo)
add_subdirectory (wii_teach)
add_subdirectory (android_teach)
add_subdirectory (trajectory_stats)
add_subdirectory (en_labyrinth)
endif(ROBOTS_012)

if(ROBOT_BIRD_HAND)
add_subdirectory (bird_hand_test)
endif(ROBOT_BIRD_HAND)

if(ROBOT_BIRD_HAND AND ROBOTS_012)
add_subdirectory (graspit)
endif(ROBOT_BIRD_HAND AND ROBOTS_012)



