# Recurse into subdirectories.

MACRO(ADD_ECP_ROBOT NAME)
  add_library("ecp_r_${NAME}" "ecp_r_${NAME}.cc")
ENDMACRO(ADD_ECP_ROBOT)

MACRO(ADD_ECP_ROBOT_WITH_KINEMATICS NAME)
  ADD_ECP_ROBOT(${NAME})
  target_link_libraries(ecp_r_${NAME} kinematics${NAME})
ENDMACRO(ADD_ECP_ROBOT_WITH_KINEMATICS)

add_subdirectory (common)
add_subdirectory (conveyor)
add_subdirectory (festival)
add_subdirectory (irp6_mechatronika)
add_subdirectory (irp6ot_m)
add_subdirectory (irp6ot_tfg)
add_subdirectory (irp6p_m)
add_subdirectory (irp6p_tfg)
add_subdirectory (multi_robot_binaries)
add_subdirectory (player)
add_subdirectory (polycrank)
add_subdirectory (shead)
add_subdirectory (smb)
add_subdirectory (speaker)
add_subdirectory (spkm)
add_subdirectory (bird_hand)
add_subdirectory (irp6_tfg)
