# Recurse into subdirectories.
add_subdirectory (ati3084)
add_subdirectory (ati6284)
add_subdirectory (ati3084MK)
add_subdirectory (ati6284KT)
add_subdirectory (ati6284MS)
add_subdirectory (common)
add_subdirectory (conveyor)
add_subdirectory (epos)
add_subdirectory (irp6_mechatronika)
add_subdirectory (irp6ot_m)
add_subdirectory (irp6ot_tfg)
add_subdirectory (irp6p_m)
add_subdirectory (irp6p_tfg)
add_subdirectory (polycrank)
add_subdirectory (shead)
add_subdirectory (smb)
add_subdirectory (speaker)
add_subdirectory (spkm)
add_subdirectory (bird_hand)
